tests/programs/inference/inference_int_mismatch.rice.opt.snap
---
source: tests/snapshots.rs
expression: output
---
success = false
stdout = ''
stderr = '''
Error:   × type mismatch
   ╭─[inference_int_mismatch.rice:3:11]
 2 │   let x: _ = 2 in
 3 │   println(x)
   ·           ┬
   ·           ╰── expected `string`, found `int`
 4 │ }
   ╰────

'''
